<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="StringFormatInvalid">
    <string name="app_name">SMSTrans</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_sign_in">Sign in</string>
    <string name="login_hint">Email Address</string>
    <string name="login_pw_hint">Password</string>
    <string name="login">Sign in</string>
    <string name="if_no_account">New Member?</string>
    <string name="sign_up_link">Sign Up!</string>
    <string name="invalid_address">Invalid email address</string>
    <string name="user_or_pw_empty">User email or password is empty</string>
    <string name="login_fail">Login failed :</string>
    <string name="signup_success">Sign up success :</string>
    <string name="signup_fail">Sign up failed :</string>
    <string name="input_empty">User name / email address / password is empty</string>
    <string name="login_success">Login success :</string>
    <string name="sign_up_title">Sign up</string>
    <string name="account_name_hint">Account name</string>
    <string name="sign_up">Sign up</string>
    <string name="name_or_email_or_pw_empty">User name / email / password should not be empty</string>
    <string name="invalid_user_name">User name should not contains special character</string>
    <string name="sign_up_success">Sign up success ! Please log in.</string>
    <string name="sign_up_failed">Sign up failed :</string>
    <string name="message_list">Message list</string>
    <string name="setting">Setting</string>
    <string name="server_message">Server Message</string>
    <string name="account">Account</string>
    <string name="account_name">Account name</string>
    <string name="account_email">Account email</string>
    <string name="upload">Upload message</string>
    <string name="download">Download messge</string>
    <string name="log_out">Log out</string>
    <string name="auto_boot_up">Auto boot up</string>
    <string name="uploaded_message">Uploaded messge</string>
    <string name="service_notification_text">SMS Transfer in background</string>
    <string name="service_notification_title">SMS Transfer running</string>
    <string name="service_notification_detail">Make sure this notification exist for functioning normally</string>
    <string name="notification_new_text">New Message :</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="website">Website</string>
    <string name="mail_title">Feedback:</string>
    <string name="share_sorry">Sorry, Shareing is developing, Please share our website</string>
    <string name="website_address">http://smsxfer.bmob.cn/</string>

    <plurals name="num_selected">
        <item quantity="zero"><xliff:g id="number" example="7">%d</xliff:g> item selected</item>
        <item quantity="one"><xliff:g id="number" example="7">%d</xliff:g> item selected</item>
        <item quantity="two"><xliff:g id="number" example="7">%d</xliff:g> items selected</item>
        <item quantity="few"><xliff:g id="number" example="7">%d</xliff:g> items selected</item>
        <item quantity="many"><xliff:g id="number" example="7">%d</xliff:g> items selected</item>
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> items selected</item>
    </plurals>
</resources>
