<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_bac"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/account_name"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/account_name_text"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="xxxxx"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/account_email"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/account_email_text"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="xxxxx"
                />

        </LinearLayout>

        <include layout="@layout/setting_segmentation" />

        <LinearLayout
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/upload"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/upload_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_choice"
                android:checked="true"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/download"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/download_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_choice"
                android:checked="true"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/server_message_location"
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/server_message_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/server_message"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/server_message_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/entrance_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_uploaded"
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/message_uploaded_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/uploaded_message"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/entrance_arrow" />
        </LinearLayout>
        <!--       <include layout="@layout/setting_segmentation" />

               <LinearLayout
                   style="@style/SettingPadding"
                   android:layout_width="match_parent"
                   android:layout_height="54dp"
                   android:background="@drawable/setting_bj"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_weight="1"
                       android:text="@string/auto_boot_up"
                       android:textSize="16sp" />

                   <CheckBox
                       android:id="@+id/auto_boot_up_switch"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:scaleType="centerInside"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:button="@drawable/selector_choice"
                       android:checked="true"
                       />

               </LinearLayout>-->

        <include layout="@layout/setting_segmentation" />

        <LinearLayout
            android:id="@+id/about_container"
            style="@style/SettingPadding"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/setting_bj"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/about"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/entrance_arrow" />
        </LinearLayout>



        <include layout="@layout/setting_segmentation" />
        <TextView
            android:layout_margin="20dp"
            android:id="@+id/user_logout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            style="@style/delete_button"
            android:text="@string/log_out"
            android:background="@drawable/selector_logout"
            android:gravity="center"
            android:paddingTop="12dip"
            android:paddingBottom="12dip"
            android:layout_marginTop="48dp"
            />

    </LinearLayout>
</ScrollView>
