<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chen.smstrans.ui.MainActivity">
    <!--TODO 把应用图标换掉-->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:background="@drawable/login_input_bac"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/account_name_container"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:ellipsize="end"
                android:hint="@string/account_name_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="#343434"
                android:textColorHint="@color/login_hint_color">

            </EditText>


        </RelativeLayout>

        <View
            style="@style/account_setup_line_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_divider_height" />

        <RelativeLayout
            android:id="@+id/account_container"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/account_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:ellipsize="end"
                android:hint="@string/login_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="#343434"
                android:textColorHint="@color/login_hint_color">

            </EditText>


        </RelativeLayout>


        <View
            android:id="@+id/divider_line"
            style="@style/account_setup_line_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_divider_height" />

        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/account_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="#00ffffff"
                android:ellipsize="end"
                android:hint="@string/login_pw_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="#343434"
                android:textColorHint="@color/login_hint_color" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sign_up"
        style="@style/accountSetupButton4Login"
        android:layout_below="@+id/sign_in_container"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="@dimen/message_sender_name_text_size" />


</RelativeLayout>
